# optiver-quant

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
frontend/: Dockerfile  package-lock.json
frontend/src/: App.tsx  index.css
research/: analysis.ipynb
schema/: __init__.py  market_data.proto  market_data_pb2.py
src/: api.py  backtester.py  benchmark.py  engine.py  monitor.py  producer.py  refiner.py  storage.py  utils.py
src/strategy/: __init__.py  base.py  obi_strategy.py
tests/: test_quant.py
